--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     content</a>
 <div class="flex flex-col min-h-screen">
     <app-header [title]="title"></app-header>
-    <main tabindex="0" id="mainContent" class="p-1 grow">
+    <main tabindex="0" id="mainContent" class="px-4 lg:px-8 grow">
         <router-outlet></router-outlet>
     </main>
     <app-footer></app-footer>
