--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,5 @@
-<footer data-cy="site-footer" class="bg-neutral-700 text-white p-1">
-    <ul class="flex gap-1">
-        <li><a routerLink="/citations">Citations</a></li>
+<footer data-cy="site-footer" class="bg-neutral-700 text-white p-1 px-4">
+    <ul class="flex gap-3">
         <li><a href="https://github.com/dmlb/covid-care/blob/main/ACCESSIBILITY_STATEMENT.md">Accessibility Statement</a></li>
         <li><a href="https://github.com/dmlb/covid-care/issues">Report an Issue</a></li>
         <li><a href="https://github.com/dmlb/covid-care">Contribute</a></li>
