--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,9 +3,21 @@
     <h2 class="text-3xl font-bold mb-2">A Consent Communication Tool</h2>
 
     <strong>How careful are you being? What is your definition of careful? <br> What is your comfort level?</strong>
-    <p>This tool is to help you communicate your experiences, practices, and expectations to someone you have or are trying to have an interpersonal relationship with.</p>
+    <p class="mb-2">This tool is to help you communicate your experiences, practices, and expectations to someone you have or are trying to have an interpersonal relationship with.</p>
+
+    <a class="button button--primary" routerLink="/quiz">Take the Quiz</a>
 </div>
 
+<div class="flex flex-wrap justify-around gap-4">
+<!-- Contribute group -->
+<article class="text-sm card" aria-labelledby="contribute">
+    <h3 class="card__title" id="contribute">
+        Contribute
+    </h3>
+    <p>
+        This project is an open effort. Consider <a href="https://github.com/dmlb/covid-care">contributing on GitHub</a>.
+    </p>
+</article>
 
 <!-- Land Acknowledgement group -->
 <article class="text-sm card" aria-labelledby="landAck">
@@ -19,3 +31,4 @@
         Traditional territories of the Niitsitapi (Blackfoot) and the people of Treaty 7 which includes the Siksika, the Piikani, the Kainai, the Tsuut'ina and the Îyârhe Nakoda of Bearspaw, Chiniki and Goodstoney. Which is also home to the Métis Nation, Region 3
     </p>
 </article>
+</div>
